# docker-cpp-cmake-build

./: Dockerfile  LICENSE  docker-compose.yaml
code-cmake/: CMakeLists.txt  main.cpp
